<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.zritc.colorfulfund.ui.ZRTextView
            android:id="@+id/item_popupwindows_photo"
            style="@style/ZRText.Medium.LTBlack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_88"
            android:gravity="center"
            android:text="@string/btn_photo_album" />

        <com.zritc.colorfulfund.ui.ZRTextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color" />

        <com.zritc.colorfulfund.ui.ZRTextView
            android:id="@+id/item_popupwindows_camera"
            style="@style/ZRText.Medium.LTBlack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_88"
            android:gravity="center"
            android:text="@string/btn_photo_graph" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.zritc.colorfulfund.ui.ZRTextView
            android:id="@+id/item_popupwindows_cancel"
            style="@style/ZRText.Medium.Grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_88"
            android:gravity="center"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>